feat: Add Person entity with repository, service, and controller
- Added Person entity class to represent user data.
- Created PersonRepository interface for database interaction.
- Implemented PersonService class for business logic.
- Added PersonController class for handling API endpoints.
- Updated application configuration for database connection.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,6 @@ validation.email.not-blank=Email obrigatório
 validation.email.invalid=E-mail inválido
 
 # Business Rules
-person.notfound=Pessoa não encontrada com o id {0}
+person.not-found=Pessoa não encontrada com o id {0}
 
 # ...
