--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,5 +5,6 @@ validation.email.invalid=E-mail inválido
 
 # Business Rules
 person.not-found=Pessoa não encontrada com o id {0}
+profile.not-found=Erro de configuração do sistema: O perfil com o tipo {0} é esperado, mas não foi encontrado.
 
 # ...
