feat(categories): implement CRUD with role-based access control
- CategoryController: GET (public), POST/PUT/DELETE (ADMIN only)
- CategoryService: business logic and validation
- SecurityConfig: allow public read access to categories
- Category model: add validation annotations

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,9 +2,13 @@
 validation.name.not-blank=Nome obrigatório
 validation.email.not-blank=Email obrigatório
 validation.email.invalid=E-mail inválido
+validation.category.name.not-blank=Nome da categoria obrigatório
+validation.category.name.size=Nome da categoria deve ter no máximo 100 caracteres
+validation.category.observation.size=Observação deve ter no máximo 500 caracteres
 
 # Business Rules
 person.not-found=Pessoa não encontrada com o id {0}
 profile.not-found=Erro de configuração do sistema: O perfil com o tipo {0} é esperado, mas não foi encontrado.
+category.not-found=Categoria não encontrada com o id {0}
 
 # ...
