feat(auctions): implement full auction lifecycle management
- Auction CRUD operations with role-based permissions
- Public endpoints for viewing open auctions
- SELLER endpoints for managing own auctions
- ADMIN endpoints for auction approval/rejection
- Category-based auction filtering
- Validation and security implementation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,9 +6,39 @@ validation.category.name.not-blank=Nome da categoria obrigatório
 validation.category.name.size=Nome da categoria deve ter no máximo 100 caracteres
 validation.category.observation.size=Observação deve ter no máximo 500 caracteres
 
+# Auction validations
+validation.auction.title.not-blank=Título do leilão é obrigatório
+validation.auction.title.size=Título deve ter no máximo 200 caracteres
+validation.auction.description.not-blank=Descrição é obrigatória
+validation.auction.description.size=Descrição deve ter no máximo 500 caracteres
+validation.auction.detailed-description.size=Descrição detalhada deve ter no máximo 2000 caracteres
+validation.auction.start-date-time.not-null=Data/hora de início é obrigatória
+validation.auction.end-date-time.not-null=Data/hora de fim é obrigatória
+validation.auction.status.not-null=Status é obrigatório
+validation.auction.observation.size=Observação deve ter no máximo 1000 caracteres
+validation.auction.increment-value.not-null=Valor do incremento é obrigatório
+validation.auction.increment-value.min=Valor do incremento deve ser maior que 0
+validation.auction.minimum-bid.not-null=Lance mínimo é obrigatório
+validation.auction.minimum-bid.min=Lance mínimo deve ser maior que 0
+validation.auction.category.not-null=Categoria é obrigatória
+validation.auction.seller.not-null=Vendedor é obrigatório
+
 # Business Rules
 person.not-found=Pessoa não encontrada com o id {0}
 profile.not-found=Erro de configuração do sistema: O perfil com o tipo {0} é esperado, mas não foi encontrado.
 category.not-found=Categoria não encontrada com o id {0}
+auction.not-found=Leilão não encontrado com o id {0}
+
+# Auction business rules
+auction.cannot-edit-opened=Não é possível editar um leilão aberto
+auction.cannot-edit-closed=Não é possível editar um leilão encerrado
+auction.cannot-delete-opened=Não é possível deletar um leilão aberto
+auction.cannot-delete-closed=Não é possível deletar um leilão encerrado
+auction.cannot-approve-not-in-review=Só é possível aprovar leilões em análise
+auction.cannot-reject-not-in-review=Só é possível rejeitar leilões em análise
+auction.cannot-close-not-opened=Só é possível encerrar leilões abertos
+auction.start-date-after-end-date=Data de início deve ser anterior à data de fim
+auction.start-date-in-past=Data de início não pode ser no passado
+auction.increment-greater-than-minimum=Valor do incremento não pode ser maior que o lance mínimo
 
 # ...
