feat: implement complete bidding system with RESTful routes
- Add Bid model with validations and automatic timestamps
- Implement BidRepository with optimized queries
- Create BidService with comprehensive business validations
- Add BidController with RESTful CRUD (/api/auctions/{id}/bids)
- Integrate bids into auction endpoints (AuctionDTO always includes bids)
- Simplify DTOs: BidRequestDTO for input, BidResponseDTO for output
- Add validations: seller cannot bid on own auction, expiry control
- Implement secure UPDATE and DELETE bid operations
- Configure permissions: public listing, authenticated CRUD
- Standardize error responses with ApiResponse
- Remove redundant DTOs and unnecessary routes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,6 +23,11 @@ validation.auction.minimum-bid.min=Lance mínimo deve ser maior que 0
 validation.auction.category.not-null=Categoria é obrigatória
 validation.auction.seller.not-null=Vendedor é obrigatório
 
+# Bid validations
+validation.bid.auction.not-null=Leilão é obrigatório
+validation.bid.amount.not-null=Valor do lance é obrigatório
+validation.bid.amount.min=Valor do lance deve ser maior que 0
+
 # Business Rules
 person.not-found=Pessoa não encontrada com o id {0}
 profile.not-found=Erro de configuração do sistema: O perfil com o tipo {0} é esperado, mas não foi encontrado.
