feat: implement Image, Feedback, and Payment entities with complete CRUD operations
- Add Image entity with URL, description, and auction relationship
- Add Feedback entity with rating system (1-5 stars) and evaluator/evaluated relationships
- Add Payment entity with amount, status enum, and transaction tracking
- Implement PaymentStatus enum (PENDING, COMPLETED, FAILED, REFUNDED)
- Create repositories with custom queries for all new entities
- Develop comprehensive services with full CRUD operations
- Build RESTful controllers with proper security and validation
- Add validation messages and error handling for new entities
- Include proper JPA relationships and constraints
- Implement pagination support for Feedback queries

This completes the backend requirements for the academic auction system project.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,11 +28,37 @@ validation.bid.auction.not-null=Leilão é obrigatório
 validation.bid.amount.not-null=Valor do lance é obrigatório
 validation.bid.amount.min=Valor do lance deve ser maior que 0
 
+# Image validations
+validation.image.url.not-blank=URL da imagem é obrigatória
+validation.image.url.url=URL da imagem deve ser válida
+validation.image.description.size=Descrição deve ter no máximo 255 caracteres
+validation.image.auction.not-null=Leilão é obrigatório
+
+# Feedback validations
+validation.feedback.evaluator.not-null=Avaliador é obrigatório
+validation.feedback.evaluated.not-null=Avaliado é obrigatório
+validation.feedback.auction.not-null=Leilão é obrigatório
+validation.feedback.rating.not-null=Avaliação é obrigatória
+validation.feedback.rating.min=Avaliação deve ser no mínimo 1
+validation.feedback.rating.max=Avaliação deve ser no máximo 5
+validation.feedback.comment.size=Comentário deve ter no máximo 1000 caracteres
+
+# Payment validations
+validation.payment.auction.not-null=Leilão é obrigatório
+validation.payment.buyer.not-null=Comprador é obrigatório
+validation.payment.amount.not-null=Valor é obrigatório
+validation.payment.amount.min=Valor deve ser maior que 0
+validation.payment.status.not-null=Status é obrigatório
+validation.payment.transaction-id.size=ID da transação deve ter no máximo 100 caracteres
+
 # Business Rules
 person.not-found=Pessoa não encontrada com o id {0}
 profile.not-found=Erro de configuração do sistema: O perfil com o tipo {0} é esperado, mas não foi encontrado.
 category.not-found=Categoria não encontrada com o id {0}
 auction.not-found=Leilão não encontrado com o id {0}
+image.not-found=Imagem não encontrada com o id {0}
+feedback.not-found=Feedback não encontrado com o id {0}
+payment.not-found=Pagamento não encontrado com o id {0}
 
 # Auction business rules
 auction.cannot-edit-opened=Não é possível editar um leilão aberto
